--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
 	<head>
-	<title>alee soltani</title>
+	
 	</head>
 	<body>
+	<title>
+	aleesoltani
+	</title>
 	Hello World	
 	</body>
 </html>
