first update- added index and link to subpages

--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <html>
-	<head>
-	
-	</head>
-	<body>
+
+<head>
 	<title>
-	aleesoltani
+		Ali Soltani
 	</title>
-	Hello World	
-	</body>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+	<div>
+		<img class="avatar center" src="IMG_9422.JPG" alt="Avatar" align="middle">
+		<div align="middle" style="margin:auto; width:50%;">
+			<br>
+			<a href="http://alisoltani.ir/resume.pdf">
+				<button class="downloadBtn">
+					<span>My Résumé</span>
+				</button>
+			</a>
+			<a href="http://alisoltani.ir/contact.html">
+				<button class="simpleBtn">
+					<span>Contact Me </span>
+				</button>
+			</a>
+			<a href="http://alisoltani.ir/Games.html">
+				<button class="downloadBtn listBtn">
+					<span>My Games</span>
+				</button>
+			</a>
+		</div>
+	</div>
+	<br>
+	<br>
+
+
+</body>
+
 </html>
