--- a/contact.html
+++ b/contact.html
@@ -6,19 +6,19 @@
     <body>
         <div align="middle" class="center" style="margin:auto">
             <a href="http://github.com/aleesoltani">
-            <img class="contacticons" src="github.PNG" alt="Github" align="middle">
+            <img class="contacticons" src="github.png" alt="Github" align="middle">
             </a>
             <a href="http://gitlab.com/aleesoltani">
-            <img class="contacticons" src="gitlab.PNG" alt="GitLab" align="middle">
+            <img class="contacticons" src="gitlab.png" alt="GitLab" align="middle">
             </a>
             <a href="http://instagram.com/alee.soltani">
-            <img class="contacticons" src="instagram.PNG" alt="Instagram" align="middle">
+            <img class="contacticons" src="instagram.png" alt="Instagram" align="middle">
             </a>
             <a href="http://linkedin.com/in/aleesoltani">
-            <img class="contacticons" src="linkedin.PNG" alt="Linkedin" align="middle">
+            <img class="contacticons" src="linkedin.png" alt="Linkedin" align="middle">
             </a>
             <a href="mailto:alee.soltani@gmail.com">
-            <img class="contacticons" src="gmail.PNG" alt="Gmail" align="middle">
+            <img class="contacticons" src="gmail.png" alt="Gmail" align="middle">
             </a>
         </div>
     </body>
