--- a/contact.html
+++ b/contact.html
@@ -1,25 +1,31 @@
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <div align="middle" class="center" style="margin:auto">
-            <a href="http://github.com/aleesoltani">
-            <img class="contacticons" src="github.png" alt="Github" align="middle">
-            </a>
-            <a href="http://gitlab.com/aleesoltani">
-            <img class="contacticons" src="gitlab.png" alt="GitLab" align="middle">
-            </a>
-            <a href="http://instagram.com/alee.soltani">
-            <img class="contacticons" src="instagram.png" alt="Instagram" align="middle">
-            </a>
-            <a href="http://linkedin.com/in/aleesoltani">
-            <img class="contacticons" src="linkedin.png" alt="Linkedin" align="middle">
-            </a>
-            <a href="mailto:alee.soltani@gmail.com">
-            <img class="contacticons" src="gmail.png" alt="Gmail" align="middle">
-            </a>
-        </div>
-    </body>
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div align="middle" class="center" style="margin:auto">
+        <a href="http://github.com/aleesoltani">
+            <img class="contacticons hovergit" src="github.png" alt="Github" align="middle">
+        </a>
+        <a href="http://gitlab.com/aleesoltani">
+            <img class="contacticons hovergitlab" src="gitlab.png" alt="GitLab" align="middle">
+        </a>
+        <a href="http://instagram.com/alee.soltani">
+            <img class="contacticons hoverinsta" src="instagram.png" alt="Instagram" align="middle">
+        </a>
+        <a href="http://t.me/aleeslt">
+            <img class="contacticons hovertelegram" src="telegram.png" alt="Instagram" align="middle">
+        </a>
+        <a href="http://linkedin.com/in/aleesoltani">
+            <img class="contacticons hoverlinkedin" src="linkedin.png" alt="Linkedin" align="middle">
+        </a>
+        <a href="mailto:alee.soltani@gmail.com">
+            <img class="contacticons hovergmail" src="gmail.png" alt="Gmail" align="middle">
+        </a>
+    </div>
+</body>
+
 </html>
