--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
             <img class="contacticons hoverinsta" src="instagram.png" alt="Instagram" align="middle">
         </a>
         <a href="http://t.me/aleeslt">
-            <img class="contacticons hovertelegram" src="telegram.png" alt="Instagram" align="middle">
+            <img class="contacticons hovertelegram" src="telegram.png" alt="Telegram" align="middle">
         </a>
         <a href="http://linkedin.com/in/aleesoltani">
             <img class="contacticons hoverlinkedin" src="linkedin.png" alt="Linkedin" align="middle">
