ui fixes and back button

--- a/contact.html
+++ b/contact.html
@@ -26,6 +26,11 @@
             <img class="contacticons hovergmail" src="gmail.png" alt="Gmail" align="middle">
         </a>
     </div>
+    <div align="middle" class="center" style="margin:auto">
+        <a href="http://alisoltani.ir">
+            <img class="bck" src="back.png" alt="Back" align="middle">
+        </a>
+    </div>
 </body>
 
 </html>
