--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<span>Contact Me </span>
 				</button>
 			</a>
-			<a href="http://alisoltani.ir/Games.html">
+			<a href="http://alisoltani.ir/games.html">
 				<button class="downloadBtn listBtn">
 					<span>My Games</span>
 				</button>
