--- a/games.html
+++ b/games.html
@@ -5,14 +5,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body >
     <div class="center" align="middle" style="margin:auto; margin-top: 17%; width:50%;">
         <span class="games">
             I am currently working on multiple 2D Android and Windows based games and all of them are going to be free to play. I would
             be happy to email them to you when they are ready. If you'd like to see them please send an email with "2D game"
             as its subject to:
             <br>
-            <span style="color:darkmagenta">alee.soltani@gmail.com</span>
+            <span style="color:#99B2DD">alee.soltani@gmail.com</span>
             <br> I will reach back to you as soon as possible.
         </span>
         <br>
