updated project structure

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 		Ali Soltani
 	</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 	<div>
-		<img class="avatar center" src="IMG_9422.JPG" alt="Avatar" align="middle">
+		<img class="avatar center" src="images/alisoltani.jpg" alt="Avatar" align="middle">
 		<div align="middle" style="margin:auto; width:50%;">
 			<br>
 			<a href="http://alisoltani.ir/resume.pdf">
