--- a/contact.html
+++ b/contact.html
@@ -2,33 +2,33 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div align="middle" class="center" style="margin:auto">
         <a href="http://github.com/aleesoltani">
-            <img class="contacticons hovergit" src="github.png" alt="Github" align="middle">
+            <img class="contacticons hovergit" src="images/github.png" alt="Github" align="middle">
         </a>
         <a href="http://gitlab.com/aleesoltani">
-            <img class="contacticons hovergitlab" src="gitlab.png" alt="GitLab" align="middle">
+            <img class="contacticons hovergitlab" src="images/gitlab.png" alt="GitLab" align="middle">
         </a>
         <a href="http://instagram.com/alee.soltani">
-            <img class="contacticons hoverinsta" src="instagram.png" alt="Instagram" align="middle">
+            <img class="contacticons hoverinsta" src="images/instagram.png" alt="Instagram" align="middle">
         </a>
         <a href="http://t.me/aleeslt">
-            <img class="contacticons hovertelegram" src="telegram.png" alt="Telegram" align="middle">
+            <img class="contacticons hovertelegram" src="images/telegram.png" alt="Telegram" align="middle">
         </a>
         <a href="http://linkedin.com/in/aleesoltani">
-            <img class="contacticons hoverlinkedin" src="linkedin.png" alt="Linkedin" align="middle">
+            <img class="contacticons hoverlinkedin" src="images/linkedin.png" alt="Linkedin" align="middle">
         </a>
         <a href="mailto:alee.soltani@gmail.com">
-            <img class="contacticons hovergmail" src="gmail.png" alt="Gmail" align="middle">
+            <img class="contacticons hovergmail" src="images/gmail.png" alt="Gmail" align="middle">
         </a>
     </div>
     <div align="middle" class="center" style="margin:auto">
         <a href="http://alisoltani.ir">
-            <img class="bck" src="back.png" alt="Back" align="middle">
+            <img class="bck" src="images/back.png" alt="Back" align="middle">
         </a>
     </div>
 </body>
