changed games page button

--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,9 @@
     </div>
     <div align="middle" class="center" style="margin:auto">
         <a href="http://alisoltani.ir">
-            <img class="bck" src="images/back.png" alt="Back" align="middle">
+            <button class="simpleBtn" style="margin-top: 3%">
+                <span>Back</span>
+            </button>
         </a>
     </div>
 </body>
