--- a/index.html
+++ b/index.html
@@ -147,9 +147,8 @@
                         <div class="text-center about-detail mx-auto mt-5">
                             <h3 class="mb-3">Hello! <span class="font-weight-bold text-custom">I'M Ali Soltani.</span></h3>
                             <ul class="mb-0 list-inline text-center about-work">
-                                <li class="list-inline-item mr-0 text-muted">UI/UX Designer</li>
-                                <li class="list-inline-item mr-0 text-muted">Photographer</li>
-                                <li class="list-inline-item mr-0 text-muted">Devloper</li>
+                                <li class="list-inline-item mr-0 text-muted">Software Developer</li>
+                                
                             </ul>
                             <p class="text-muted mt-3">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
                         </div>
@@ -159,50 +158,50 @@
                     <div class="col-lg-6">
                         <div class="progress-bars skill-custom">
                             <div class="clearfix">
-                                <div class="text-dark font-weight-bold float-left">Development</div>
+                                <div class="text-dark font-weight-bold float-left">Software Development</div>
                                 <div class="text-muted float-right">80%</div>
                             </div>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <div class="clearfix">
-                                <div class="text-dark font-weight-bold float-left">WordPress</div>
-                                <div class="text-muted float-right">59%</div>
+                                <div class="text-dark font-weight-bold float-left">C++/C Development</div>
+                                <div class="text-muted float-right">85%</div>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 59%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <div class="clearfix">
-                                <div class="text-dark font-weight-bold float-left">Photoshop</div>
-                                <div class="text-muted float-right">88%</div>
+                                <div class="text-dark font-weight-bold float-left">Android Development</div>
+                                <div class="text-muted float-right">60%</div>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 88%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="progress-bars skill-custom">
                             <div class="clearfix">
-                                <div class="text-dark font-weight-bold float-left">Html</div>
-                                <div class="text-muted float-right">96%</div>
+                                <div class="text-dark font-weight-bold float-left">English</div>
+                                <div class="text-muted float-right">98%</div>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 86%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" style="width: 98%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <div class="clearfix">
-                                <div class="text-dark font-weight-bold float-left">Css</div>
+                                <div class="text-dark font-weight-bold float-left">SQL</div>
                                 <div class="text-muted float-right">70%</div>
                             </div>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <div class="clearfix">
-                                <div class="text-dark font-weight-bold float-left">Asp.net</div>
-                                <div class="text-muted float-right">58%</div>
+                                <div class="text-dark font-weight-bold float-left">Python Development</div>
+                                <div class="text-muted float-right">60%</div>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width:58%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar" role="progressbar" style="width:60%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                     </div>
@@ -221,7 +220,9 @@
                             <div class="main-title-border">
                                 <i class="mdi mdi-asterisk"></i>
                             </div>
-                            <p class="text-muted mx-auto mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                            <p class="text-muted mx-auto mt-2">
+                                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -351,11 +352,13 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="text-center mx-auto section-main-title">
-                            <h2><span class="font-weight-bold">Education & Experiance</span></h2>
+                            <h2><span class="font-weight-bold">Education & Experience</span></h2>
                             <div class="main-title-border">
                                 <i class="mdi mdi-asterisk"></i>
                             </div>
-                            <p class="text-muted mx-auto mt-2">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                            <p class="text-muted mx-auto mt-2">
+                                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -811,7 +814,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="text-center mx-auto section-main-title">
-                            <h2>Get In <span class="font-weight-bold">Tuch</span></h2>
+                            <h2>Get In <span class="font-weight-bold">Touch</span></h2>
                             <div class="main-title-border">
                                 <i class="mdi mdi-asterisk"></i>
                             </div>
@@ -826,8 +829,8 @@
                                 <i class="mbri-mobile2 text-custom h2"></i>
                             </div>
                             <div class="mt-2">
-                                <p class="mb-0 font-weight-bold">Call Us On</p>
-                                <p class="text-muted">+985 123 7856</p>
+                                <p class="mb-0 font-weight-bold">Call Me On</p>
+                                <p class="text-muted">+98 917 836 1517</p>
                             </div>
                         </div>
                         <div class="text-center mt-4">
@@ -835,11 +838,11 @@
                                 <i class="mbri-letter text-custom h2"></i>
                             </div>
                             <div class="mt-2">
-                                <p class="mb-0 font-weight-bold">Email Us At</p>
-                                <p class="text-muted">exmaple@gmail.com</p>
+                                <p class="mb-0 font-weight-bold">Email Me At</p>
+                                <p class="text-muted">alee.soltani@gmail.com</p>
                             </div>
                         </div>
-                        <div class="text-center mt-4">
+                        <!-- <div class="text-center mt-4">
                             <div>
                                 <i class="mbri-pin text-custom h2"></i>
                             </div>
@@ -847,7 +850,7 @@
                                 <p class="mb-0 font-weight-bold">Visit Office</p>
                                 <p class="text-muted">202, Grasselli Street , Conway.</p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="col-lg-8">
                         <div class="contact_form">
@@ -899,7 +902,7 @@
                 <div class="row pt-4 pb-4">
                     <div class="col-lg-12">
                         <div class="float-left float_none mt-2 mb-2">
-                            <p class="copy-rights text-muted mb-0">2018 &copy; Elvish. Design by ThemesBoss.</p>
+                            <p class="copy-rights text-muted mb-0">2018 &copy; Ali Soltani</p>
                         </div>
                         <div class="float-right float_none mt-2 mb-2">
                             <ul class="list-inline fot_social mb-0">
