--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <div class="col-lg-12">
                                 <div class="text-white text-center">
                                     <h4>Hello & Welcome</h4>
-                                    <h1 class="header_title mb-0 mt-3">I Am <span class="simple-text-rotate font-weight-bold"> Ali Soltani.,A Designer.,A Developer.</span></h1>
+                                    <h1 class="header_title mb-0 mt-3">I Am <span class="simple-text-rotate font-weight-bold"> Ali Soltani., A Designer., A Developer.</span></h1>
                                     <ul class="social_home list-unstyled text-center pt-4">
                                         <li class="list-inline-item"><a href="http://t.me/aleeslt"><i class="mdi mdi-telegram"></i></a></li>
                                         <li class="list-inline-item"><a href="http://wa.me/989178361517"><i class="mdi mdi-whatsapp"></i></a></li>
@@ -215,35 +215,35 @@
                             <div class="lan_fun_icon mb-3">
                                 <i class="mbri-timer h1"></i>
                             </div>
-                            <h1 class="lan_fun_value mb-1" data-count="654">4</h1>
+                            <h1 class="lan_fun_value mb-1" data-count="3200">4</h1>
                             <p class="lan_fun_name mb-0">Working Hours</p>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="text-center lan_funfact p-4 mt-3 rounded text-white">
                             <div class="lan_fun_icon mb-3">
-                                <i class="mbri-gift h1"></i>
+                                <i class="mbri-preview h1"></i>
                             </div>
-                            <h1 class="lan_fun_value mb-1" data-count="6400">10</h1>
-                            <p class="lan_fun_name mb-0">Completed Projects</p>
+                            <h1 class="lan_fun_value mb-1" >INTJ-T</h1>
+                            <p class="lan_fun_name mb-0">Personality Test</p>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="text-center lan_funfact p-4 mt-3 rounded text-white">
                             <div class="lan_fun_icon mb-3">
-                                <i class="mbri-user h1"></i>
+                                <i class="mbri-hot-cup h1"></i>
                             </div>
-                            <h1 class="lan_fun_value mb-1" data-count="2389">201</h1>
-                            <p class="lan_fun_name mb-0">No. of Clients</p>
+                            <h1 class="lan_fun_value mb-1">Coffee</h1>
+                            <p class="lan_fun_name mb-0">Favorite Drink</p>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="text-center lan_funfact p-4 mt-3 rounded text-white">
                             <div class="lan_fun_icon mb-3">
-                                <i class="mbri-users h1"></i>
+                                <i class="mbri-idea h1"></i>
                             </div>                       
-                            <h1 class="lan_fun_value mb-1" data-count="653">2</h1>
-                            <p class="lan_fun_name mb-0">Team Member</p>
+                            <h1 class="lan_fun_value mb-1" data-count="187">2</h1>
+                            <p class="lan_fun_name mb-0">IQ</p>
                         </div>
                     </div>
                 </div>
@@ -370,7 +370,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-center text-white">
-                            <h1>I Am Available For Freelancer.</h1>
+                            <h1>I Am Available For Freelance Work.</h1>
                             <div class="mt-4">
                                 <a href="mailto:alee.soltani@gmail.com" class="btn btn-outline-custom">Hire Me!</a>
                             </div>
