updated index and links

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                                         <div class="cb_edu_exp_detail">
                                             <h4>English Enthusiast</h4>
                                             <p class="cv_desc mb-0">
-                                                I've been studying English from my early days and I'm always learning.
+                                                I've been studying English since I was 6 years old and I'm always learning.
                                             </p>
                                         </div>
                                     </div>
