--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Ali Soltani</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
-        <meta name="author" content="ThemesBoss" />
+        <meta name="author" content="AliSoltani" />
 
         <link rel="shortcut icon" href="images/favicon.ico">
 
@@ -128,7 +128,7 @@
                                 <i class="mdi mdi-asterisk"></i>
                             </div>
                             <p class="text-muted mx-auto mt-2">
-                                I am software developer based in Shiraz, Iran. Things that excite me are Cryptography, Data Science, 
+                                I am a software developer based in Shiraz, Iran. Things that excite me are Cryptography, Data Science, 
                                 Problem Solving, Design and Cooking.
                             </p>
                         </div>
