--- a/index.html
+++ b/index.html
@@ -67,9 +67,6 @@
                             <a href="#about" class="nav-link">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#services" class="nav-link">Services</a>
-                        </li>
-                        <li class="nav-item">
                             <a href="#education" class="nav-link">Education</a>
                         </li>
                         <li class="nav-item">
@@ -91,7 +88,7 @@
                             <div class="col-lg-12">
                                 <div class="text-white text-center">
                                     <h4>Hello & Welcome</h4>
-                                    <h1 class="header_title mb-0 mt-3">I Am <span class="simple-text-rotate font-weight-bold"> Ali Soltani., A Designer., A Developer.</span></h1>
+                                    <h1 class="header_title mb-0 mt-3">I Am <span class="simple-text-rotate font-weight-bold"> Ali Soltani., A Developer., A Researcher.</span></h1>
                                     <ul class="social_home list-unstyled text-center pt-4">
                                         <li class="list-inline-item"><a href="http://t.me/aleeslt"><i class="mdi mdi-telegram"></i></a></li>
                                         <li class="list-inline-item"><a href="http://wa.me/989178361517"><i class="mdi mdi-whatsapp"></i></a></li>
@@ -391,8 +388,8 @@
                             <div class="main-title-border">
                                 <i class="mdi mdi-asterisk"></i>
                             </div>
-                            <p class="text-muted mx-auto mt-2">You can contact me using these ways, also my social media addresses are found
-                                in the website.
+                            <p class="text-muted mx-auto mt-2">You can contact me using below links, also my social media addresses are found
+                                on the website.
                             </p>
                         </div>
                     </div>
@@ -442,6 +439,7 @@
                             <ul class="list-inline fot_social mb-0">
                                 <li class="list-inline-item"><a href="http://t.me/aleeslt" class="social-icon text-muted"><i class="mdi mdi-telegram"></i></a></li>
                                 <li class="list-inline-item"><a href="http://linkedin.com/in/aleesoltani" class="social-icon text-muted"><i class="mdi mdi-linkedin"></i></a></li>
+                                <li class="list-inline-item"><a href="http://wa.me/989178361517" class="social-icon text-muted"><i class="mdi mdi-whatsapp"></i></a></li>
                                 <li class="list-inline-item"><a href="http://github.com/aleesoltani" class="social-icon text-muted"><i class="mdi mdi-github-circle"></i></a></li>
                                 <li class="list-inline-item"><a href="mailto:alee.soltani@gmail.com" class="social-icon text-muted"><i class="mdi mdi-gmail"></i></a></li>
                             </ul>
