--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-12">
                                 <div class="text-white text-center">
-                                    <h4>Hello & Welcome</h4>
+                                    <h4>Hello World!</h4>
                                     <h1 class="header_title mb-0 mt-3">I Am <span class="simple-text-rotate font-weight-bold"> Ali Soltani., A Developer., A Researcher.</span></h1>
                                     <ul class="social_home list-unstyled text-center pt-4">
                                         <li class="list-inline-item"><a href="http://t.me/aleeslt"><i class="mdi mdi-telegram"></i></a></li>
@@ -126,7 +126,7 @@
                             </div>
                             <p class="text-muted mx-auto mt-2">
                                 I am a software developer based in Shiraz, Iran. Things that excite me are Cryptography, Data Science, 
-                                Problem Solving, Design and Cooking.
+                                Problem Solving, Designing and Cooking.
                             </p>
                         </div>
                     </div>
