--- a/index.html
+++ b/index.html
@@ -87,12 +87,13 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-12">
                                 <div class="text-white text-center">
-                                    <h4>Hello World!</h4>
+                                    <h4>Hello & Welcome</h4>
                                     <h1 class="header_title mb-0 mt-3">I Am <span class="simple-text-rotate font-weight-bold"> Ali Soltani., A Developer., A Researcher.</span></h1>
                                     <ul class="social_home list-unstyled text-center pt-4">
                                         <li class="list-inline-item"><a href="http://t.me/aleeslt"><i class="mdi mdi-telegram"></i></a></li>
                                         <li class="list-inline-item"><a href="http://wa.me/989178361517"><i class="mdi mdi-whatsapp"></i></a></li>
                                         <li class="list-inline-item"><a href="http://github.com/aleesoltani"><i class="mdi mdi-github-circle"></i></a></li>
+                                        <li class="list-inline-item"><a href="http://medium.com/alisoltani"><i class="mdi mdi-medium"></i></a></li>
                                         <li class="list-inline-item"><a href="http://linkedin.com/in/aleesoltani"><i class="mdi mdi-linkedin"></i></a></li>
                                         <li class="list-inline-item"><a href="http://dribbble.com/aleesoltani"><i class="mdi mdi-dribbble"></i></a></li>
                                         
@@ -361,7 +362,7 @@
         <!-- END EXP. & EDU. -->
 
         <!-- START CTA -->
-        <section class="section bg-cta">
+        <section class="section bg-cta" id="contact">
             <div class="bg-overlay"></div>
             <div class="container">
                 <div class="row">
@@ -440,7 +441,8 @@
                                 <li class="list-inline-item"><a href="http://t.me/aleeslt" class="social-icon text-muted"><i class="mdi mdi-telegram"></i></a></li>
                                 <li class="list-inline-item"><a href="http://linkedin.com/in/aleesoltani" class="social-icon text-muted"><i class="mdi mdi-linkedin"></i></a></li>
                                 <li class="list-inline-item"><a href="http://wa.me/989178361517" class="social-icon text-muted"><i class="mdi mdi-whatsapp"></i></a></li>
-                                <li class="list-inline-item"><a href="http://github.com/aleesoltani" class="social-icon text-muted"><i class="mdi mdi-github-circle"></i></a></li>
+                                <li class="list-inline-item"><a href="http://medium.com/alisoltani" class="social-icon text-muted"><i class="mdi mdi-medium"></i></a></li>  
+                                <li class="list-inline-item"><a href="http://github.com/aleesoltani" class="social-icon text-muted"><i class="mdi mdi-github-circle"></i></a></li>                              
                                 <li class="list-inline-item"><a href="mailto:alee.soltani@gmail.com" class="social-icon text-muted"><i class="mdi mdi-gmail"></i></a></li>
                             </ul>
                         </div>
