--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
         <!-- END EXP. & EDU. -->
 
         <!-- START CTA -->
-        <section class="section bg-cta">
+        <section class="section bg-cta" id="contact">
             <div class="bg-overlay"></div>
             <div class="container">
                 <div class="row">
