--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             </div>
                             <p class="text-muted mx-auto mt-2">
                                 I am a software developer based in Shiraz, Iran. Things that excite me are Cryptography, Data Science, 
-                                Problem Solving, Designing and Cooking.
+                                Problem Solving, Designing and Game Development.
                             </p>
                         </div>
                     </div>
