updated text animation to resolve bugs

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
         <script src="js/custom.js"></script>
         <script>
             $(".simple-text-rotate").textrotator({
-                animation: "fade",
+                animation: "dissolve",
                 speed: 3500
             });
         </script>
