UPDATE: new info

--- a/index.html
+++ b/index.html
@@ -151,22 +151,22 @@
                     <div class="col-lg-6">
                         <div class="progress-bars skill-custom">
                             <div class="clearfix">
-                                <div class="text-dark font-weight-bold float-left">Software Development</div>
-                                <div class="text-muted float-right">80%</div>
+                                <div class="text-dark font-weight-bold float-left">Backend Development (RESTful-Websockets-Docker-Git)</div>
+                                <div class="text-muted float-right">85%</div>
                             </div>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <div class="clearfix">
-                                <div class="text-dark font-weight-bold float-left">C++/C Development</div>
+                                <div class="text-dark font-weight-bold float-left">Python Development & Related Technologies</div>
                                 <div class="text-muted float-right">85%</div>
                             </div>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <div class="clearfix">
-                                <div class="text-dark font-weight-bold float-left">Android Development</div>
-                                <div class="text-muted float-right">50%</div>
+                                <div class="text-dark font-weight-bold float-left">C/C++ Development</div>
+                                <div class="text-muted float-right">75%</div>
                             </div>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -190,7 +190,7 @@
                                 <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <div class="clearfix">
-                                <div class="text-dark font-weight-bold float-left">Python Development</div>
+                                <div class="text-dark font-weight-bold float-left">Deep Learning & AI (Keras)</div>
                                 <div class="text-muted float-right">60%</div>
                             </div>
                             <div class="progress">
@@ -213,7 +213,7 @@
                             <div class="lan_fun_icon mb-3">
                                 <i class="mbri-timer h1"></i>
                             </div>
-                            <h1 class="lan_fun_value mb-1" data-count="3200">4</h1>
+                            <h1 class="lan_fun_value mb-1" data-count="6720">4</h1>
                             <p class="lan_fun_name mb-0">Working Hours</p>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                             <div class="lan_fun_icon mb-3">
                                 <i class="mbri-preview h1"></i>
                             </div>
-                            <h1 class="lan_fun_value mb-1" >INTJ-T</h1>
+                            <h1 class="lan_fun_value mb-1" >ENFP-T</h1>
                             <p class="lan_fun_name mb-0">Personality Test</p>
                         </div>
                     </div>
@@ -268,13 +268,13 @@
                             <div class="cv_edu_exp_box mt-4">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2016 - Now</div>
+                                        <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2016 - 2019</div>
                                         <div class="cb_edu_exp_detail">
                                             <h4>MSc in Computer Software Engineering</h4>
                                             Studied at Shiraz University
                                             <p class="cv_desc mb-0">
-                                                Thesis Field : Emotion Analysis, Machine Learning
-                                                Currently working on my thesis.
+                                                Thesis Field : Sentiment Analysis, Deep Learning
+                                                I've worked with Keras on Classifying Text Data.
                                             </p>
                                         </div>
                                     </div>
@@ -316,11 +316,12 @@
                             <div class="cv_edu_exp_box mt-4">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2018 - Now</div>
+                                        <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2022-08 - Now</div>
                                         <div class="cb_edu_exp_detail">
-                                            <h4>Junior Data Scientist</h4>
+                                            <h4>Software Engineer - Backend</h4>
+                                            <h5>SatPlat</h5>
                                             <p class="cv_desc mb-0">
-                                                Currently working on textual data using Python and still learning new stuff.
+                                                I'm currently working as a backend engineer developing Python Django at Satplat.
                                             </p>
                                         </div>
                                     </div>
@@ -330,11 +331,12 @@
                             <div class="cv_edu_exp_box mt-4">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2012 - Now</div>
+                                        <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2020-01 - 2021-01</div>
                                         <div class="cb_edu_exp_detail">
-                                            <h4>Freelancer</h4>
+                                            <h4>Software Engineer - Backend</h4>
+                                            <h5>AsrGooyeshPardaz - Romand</h5>
                                             <p class="cv_desc mb-0">
-                                                I've completed multiple projects during my studies and am open for hiring now.
+                                                I've been working as a backend developer and linux admin for two companies.
                                             </p>
                                         </div>
                                     </div>
@@ -344,11 +346,12 @@
                             <div class="cv_edu_exp_box mt-4">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2000 - Now</div>
+                                        <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2017-07 - 2018-01</div>
                                         <div class="cb_edu_exp_detail">
-                                            <h4>English Enthusiast</h4>
+                                            <h4>BI Developer</h4>
+                                            <h5>Shiraz University</h5>
                                             <p class="cv_desc mb-0">
-                                                I've been studying English since I was 6 years old and I'm always learning.
+                                                Worked on huge databases, Extracting BI Answers. Using SQL. 
                                             </p>
                                         </div>
                                     </div>
