UPDATE: update experiences

--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
                                             <h4>BI SQL Developer</h4>
                                             <p class="cv_desc mb-0">
                                                 Shiraz University, June 2017 - January 2018
+                                                Worked on huge databases, Extracting BI Answers. Using SQL. 
                                             </p>
                                         </div>
                                     </div>
@@ -319,9 +320,10 @@
                                         <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2022-08 - Now</div>
                                         <div class="cb_edu_exp_detail">
                                             <h4>Software Engineer - Backend</h4>
-                                            <h5>SatPlat</h5>
+                                            <h4>SatPlat</h4>
                                             <p class="cv_desc mb-0">
-                                                I'm currently working as a backend engineer developing Python Django at Satplat.
+                                                I'm currently developing backend applications using Python Django, Git,
+                                                Docker, and RESTful apis.
                                             </p>
                                         </div>
                                     </div>
@@ -334,9 +336,10 @@
                                         <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2020-01 - 2021-01</div>
                                         <div class="cb_edu_exp_detail">
                                             <h4>Software Engineer - Backend</h4>
-                                            <h5>AsrGooyeshPardaz - Romand</h5>
+                                            <h4>Romand</h4>
                                             <p class="cv_desc mb-0">
-                                                I've been working as a backend developer and linux admin for two companies.
+                                                Worked with Python Django, Git and Websockets.
+                                                Instructed Multiple Interns.
                                             </p>
                                         </div>
                                     </div>
@@ -346,12 +349,12 @@
                             <div class="cv_edu_exp_box mt-4">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                        <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2017-07 - 2018-01</div>
+                                        <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2020-01 - 2021-01</div>
                                         <div class="cb_edu_exp_detail">
-                                            <h4>BI Developer</h4>
-                                            <h5>Shiraz University</h5>
+                                            <h4>Software Engineer - Backend</h4>
+                                            <h4>AsrGooyeshPardaz</h4>
                                             <p class="cv_desc mb-0">
-                                                Worked on huge databases, Extracting BI Answers. Using SQL. 
+                                                Linux Administration, Project Management. 
                                             </p>
                                         </div>
                                     </div>
