--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <a href="#about" class="nav-link">About</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#education" class="nav-link">Education</a>
+                            <a href="#experience" class="nav-link">Experience</a>
                         </li>
                         <li class="nav-item">
                             <a href="#contact" class="nav-link">Contact</a>
@@ -250,7 +250,7 @@
         <!-- START FUNFACTS -->
 
         <!-- START EXP. & EDU. -->
-        <section class="section" id="education">
+        <section class="section" id="experience">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
