UPDATE: update experiences

--- a/index.html
+++ b/index.html
@@ -273,8 +273,10 @@
                                             <h4>MSc in Computer Software Engineering</h4>
                                             Studied at Shiraz University
                                             <p class="cv_desc mb-0">
-                                                Thesis Field : Sentiment Analysis, Deep Learning
-                                                I've worked with Keras on Classifying Text Data.
+                                                Thesis Title : Proposing a Method for Human Emotion Analysis Using Social Networks
+                                            </p>
+                                            <p class="cv_desc mb-0">
+                                                I've worked with Keras on Classifying Text Data. I did Sentiment Analysis on Multiple Datasets using Deep Learning.
                                             </p>
                                         </div>
                                     </div>
@@ -304,6 +306,8 @@
                                             <h4>BI SQL Developer</h4>
                                             <p class="cv_desc mb-0">
                                                 Shiraz University, June 2017 - January 2018
+                                            </p>
+                                            <p class="cv_desc mb-0">
                                                 Worked on huge databases, Extracting BI Answers. Using SQL. 
                                             </p>
                                         </div>
@@ -320,7 +324,7 @@
                                         <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2022-08 - Now</div>
                                         <div class="cb_edu_exp_detail">
                                             <h4>Software Engineer - Backend</h4>
-                                            <h4>SatPlat</h4>
+                                            SatPlat
                                             <p class="cv_desc mb-0">
                                                 I'm currently developing backend applications using Python Django, Git,
                                                 Docker, and RESTful apis.
@@ -336,7 +340,7 @@
                                         <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2020-01 - 2021-01</div>
                                         <div class="cb_edu_exp_detail">
                                             <h4>Software Engineer - Backend</h4>
-                                            <h4>Romand</h4>
+                                            Romand
                                             <p class="cv_desc mb-0">
                                                 Worked with Python Django, Git and Websockets.
                                                 Instructed Multiple Interns.
@@ -352,7 +356,7 @@
                                         <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2020-01 - 2021-01</div>
                                         <div class="cb_edu_exp_detail">
                                             <h4>Software Engineer - Backend</h4>
-                                            <h4>AsrGooyeshPardaz</h4>
+                                            AsrGooyeshPardaz
                                             <p class="cv_desc mb-0">
                                                 Linux Administration, Project Management. 
                                             </p>
