UPDATE: freelance work

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                         <div class="text-center text-white">
                             <h1>I Am Available For Freelance Work.</h1>
                             <div class="mt-4">
-                                <a href="mailto:alee.soltani@gmail.com" class="btn btn-outline-custom">Hire Me!</a>
+                                <a href="mailto:alee.soltani@gmail.com" class="btn btn-outline-custom">Don't hesitate to reach out!</a>
                             </div>
                         </div>
                     </div>
