--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                                 <i class="mbri-mobile2 text-custom h2"></i>
                             </div>
                             <div class="mt-2">
-                                <p class="mb-0 font-weight-bold">Call Me On</p>
+                                <p class="mb-0 font-weight-bold">Call Me</p>
                                 <p class="text-muted">+98 917 836 1517</p>
                             </div>
                         </div>
@@ -426,7 +426,7 @@
                                 <i class="mbri-letter text-custom h2"></i>
                             </div>
                             <div class="mt-2">
-                                <p class="mb-0 font-weight-bold">Email Me At</p>
+                                <p class="mb-0 font-weight-bold">Email Me</p>
                                 <p class="text-muted">alee.soltani@gmail.com</p>
                             </div>
                         </div>                        
@@ -444,7 +444,7 @@
                 <div class="row pt-4 pb-4">
                     <div class="col-lg-12">
                         <div class="float-left float_none mt-2 mb-2">
-                            <a href="http://alisoltani.ir" class="copy-rights text-muted mb-0">2018 &copy; Ali Soltani</a>
+                            <a href="http://alisoltani.ir" class="copy-rights text-muted mb-0">2022 &copy; Ali Soltani</a>
                         </div>
                         <div class="float-right float_none mt-2 mb-2">
                             <ul class="list-inline fot_social mb-0">
