--- a/index.html
+++ b/index.html
@@ -325,7 +325,6 @@
                                         <div class="cb_edu_exp_detail">
                                             <h4>Software Engineer - Backend</h4>
                                             <p><strong>SatPlat</strong></p>
-                                            <p><strong>Tehran, Iran</strong></p>
                                             <p class="cv_desc mb-0">
                                                 I'm currently developing backend applications using Python Django, Git,
                                                 Docker, and RESTful apis.
@@ -341,8 +340,7 @@
                                         <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2020-01 - 2021-01</div>
                                         <div class="cb_edu_exp_detail">
                                             <h4>Software Engineer - Backend</h4>
-                                            <p><strong>Romand.ir</strong></p>
-                                            <p><strong>Sharif University, Tehran, Iran</strong></p>
+                                            <p><strong>Romand.ir <br>Sharif University, Tehran, Iran</strong></p>
                                             <p class="cv_desc mb-0">
                                                 Worked with Python Django, Git and Websockets.
                                                 Instructed Multiple Interns.
@@ -358,8 +356,7 @@
                                         <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2020-01 - 2021-01</div>
                                         <div class="cb_edu_exp_detail">
                                             <h4>Software Engineer - Backend</h4>
-                                            <p><strong>AsrGooyeshPardaz</strong></p>
-                                            <p><strong>Sharif University, Tehran, Iran</strong></p>
+                                            <p><strong>AsrGooyeshPardaz <br>Sharif University, Tehran, Iran</strong></p>
                                             <p class="cv_desc mb-0">
                                                 Linux Administration, Project Management. 
                                             </p>
