--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                                         <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2022-08 - Now</div>
                                         <div class="cb_edu_exp_detail">
                                             <h4>Software Engineer - Backend</h4>
-                                            <p><strong>SatPlat</strong></p>
+                                            <p><strong>SatPlat <br>Tehran, Iran</strong></p>
                                             <p class="cv_desc mb-0">
                                                 I'm currently developing backend applications using Python Django, Git,
                                                 Docker, and RESTful apis.
@@ -356,7 +356,7 @@
                                         <div class="cv_edu_exp_year font-weight-bold text-custom position-relative">2020-01 - 2021-01</div>
                                         <div class="cb_edu_exp_detail">
                                             <h4>Software Engineer - Backend</h4>
-                                            <p><strong>AsrGooyeshPardaz <br>Sharif University, Tehran, Iran</strong></p>
+                                            <p><strong>AsrGooyeshPardaz <br>Tehran, Iran</strong></p>
                                             <p class="cv_desc mb-0">
                                                 Linux Administration, Project Management. 
                                             </p>
