--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                     Grade: A+
                   </p>
                   <p class="mb-0 mt-1 small text-muted">
-                    <em>C++, Java</em>
+                    <em>C, C++, Java, Hardware Programming</em>
                   </p>
                 </div>
               </div>
